# warntrace

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLASSIFICATION.md
examples/: application_warning.py  dependency_warning.py  repeated_warnings.py
src/warntrace/: __init__.py  __main__.py  _bootstrap.py  api.py  capture.py  classifier.py  cli.py  dependencies.py  models.py  ownership.py  renderer.py  report.py  utils.py
tests/: test_aggregation.py  test_api.py  test_capture.py  test_classifier.py  test_cli.py  test_dependencies.py  test_fixtures.py  test_models.py  test_ownership.py  test_pytest_compat.py  test_renderer.py  test_utils.py
tests/fixtures/direct_dependency/: pyproject.toml
tests/fixtures/direct_dependency/src/direct_dependency/: __init__.py
tests/fixtures/sample_app/: pyproject.toml
tests/fixtures/sample_app/src/sample_app/: __init__.py
tests/fixtures/transitive_dependency/: pyproject.toml
tests/fixtures/transitive_dependency/src/transitive_dependency/: __init__.py
