[project]
name = "warntrace"
version = "0.1.0"
description = "Find which package caused a Python warning and where your code triggered it."
readme = "README.md"
authors = [
    { name = "Kunal Kaul", email = "54585925+kunalkaul@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = ["packaging>=24"]

[project.scripts]
warntrace = "warntrace.cli:main"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["warntrace"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
