[project]
name = "warntrace"
version = "0.1.0"
description = "Find which package caused a Python warning and where your code triggered it."
readme = "README.md"
authors = [
    { name = "Kunal Kaul", email = "kkdevcode@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["warnings", "debugging", "cli", "pytest", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = ["packaging>=24"]

[project.urls]
Homepage = "https://github.com/kunalkaul/warntrace"
Documentation = "https://github.com/kunalkaul/warntrace#readme"
Source = "https://github.com/kunalkaul/warntrace"
Issues = "https://github.com/kunalkaul/warntrace/issues"

[project.scripts]
warntrace = "warntrace.cli:main"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["warntrace"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
